--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,9 @@ pandas>=2.0.0
 plotly>=5.18.0
 nltk>=3.8.0
 textblob>=0.17.1
+
+# Testing
+pytest>=7.4.4
+pytest-cov>=4.1.0
+flake8>=6.1.0
+black>=23.12.1
